--- a/desafios/Desafio011b/style.css
+++ b/desafios/Desafio011b/style.css
@@ -2,15 +2,19 @@
 
 body {
     position: relative;
+    height: 100vh;
     background-image: url('espaco.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 
 }
 img {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 35%;
-    transform: translate(-57%, 25%);
+    max-width:400px;
+    max-height:400px;
+    width: 60%;
+    transform: translate(-50%, -50%);
 }
