--- a/desafios/Desafio011b/style.css
+++ b/desafios/Desafio011b/style.css
@@ -7,6 +7,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    background-attachment: scroll;
 
 }
 img {
