--- a/desafios/Desafio012/estilo/style.css
+++ b/desafios/Desafio012/estilo/style.css
@@ -1,13 +1,23 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+}
+
+:root {
+    --fonte01: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte02: 'Passion One', cursive;
+    --fonte03: 'Sriracha', cursive;
 }
 
 html, body {
+    font-family:var(--fonte01);
     min-height: 100vh;
-    background-color: darkgray
+    background-color: darkgray;
 }
 
 header {
@@ -17,8 +27,11 @@ header {
 }
 
 header > h1 {
-    padding-top:50px;
+    font-family: var(--fonte02);
+    padding-top: 50px;
     font-variant: small-caps;
+    font-family: 'Passion One', cursive;
+    font-size: 10vw;
 }
 
 header > p {
@@ -36,10 +49,12 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-family: var(--fonte03);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -52,8 +67,10 @@ section.imagem {
     color: white;
 }
 section.imagem > p {
+    display: inline-block;
+    padding: 5px;
     background-color:rgba(0, 0, 0, 0.144);
-    width: 400px;
+    
 }
 
 footer {
