--- a/desafios/Desafio012/estilo/style.css
+++ b/desafios/Desafio012/estilo/style.css
@@ -57,22 +57,41 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color:white;
     color: black;
 }
 
 section.imagem {
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(80, 80, 80);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486);
+    background-size: cover;
 }
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color:rgba(0, 0, 0, 0.144);
+    background-color:rgba(49, 49, 49, 0.404);
+    border-radius: 10px;
+    text-shadow: 1px 1px 0px black;
     
 }
 
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-attachment: fixed;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    background-attachment: fixed;
+}
 footer {
     background-color: black;
     color: white;
