--- a/Tentativas/Guerreiros do Amanhã/style.css
+++ b/Tentativas/Guerreiros do Amanhã/style.css
@@ -67,7 +67,16 @@ body {
 
 #inventory-menu {
     height: 100%;
-    padding-top: 200px;
+    padding-top: 960px;
     background-color: rgba(7, 7, 7, 0.288);
     box-shadow:0 0 10px 0 black;
+}
+.card-img {
+    border-top-left-radius: calc(0.25rem - 1px);
+    border-top-right-radius: calc(0.25rem - 1px);
+    border-bottom:0px;
+}
+
+.dropdown-item {
+    padding: 0.25rem 2.5rem;
 }
